fix: resolve sonar issues - constructor injection, specific exceptions, stream.toList(), remove dead code, chain assertions